--- a/configs/policy/tasks/task4_sorting.yaml
+++ b/configs/policy/tasks/task4_sorting.yaml
@@ -26,11 +26,11 @@ task:
     resume_from: 'pretrained'
     pretrained_path: 'lerobot/smolvla_base' # 使用预训练模型
 
-    # 优化器配置（方案A：单任务可以使用更高学习率）
+    # 优化器配置（统一学习率策略，与Task1/2保持一致）
     policy:
-      optimizer_lr: 0.00012 # 提高学习率（0.00002→0.00012），单任务专用优化
-      scheduler_warmup_steps: 3000 # 标准warmup步数
-      scheduler_decay_steps: 50000 # 更长decay，配合更多epochs
+      optimizer_lr: 0.00008 # 统一学习率（从0.00012降低），提高训练稳定性
+      scheduler_warmup_steps: 5000 # 增加warmup（从3000→5000，约4.8 epochs），避免早期发散
+      scheduler_decay_steps: 50000 # 保持decay步数（48.0 epochs，23.0%），配合200 epochs训练
 
 
   # Replay配置（方案A：不使用replay，单任务专用）
