--- a/configs/policy/tasks/task4_sorting.yaml
+++ b/configs/policy/tasks/task4_sorting.yaml
@@ -26,11 +26,11 @@ task:
     resume_from: 'pretrained'
     pretrained_path: 'lerobot/smolvla_base' # 使用预训练模型
 
-    # 优化器配置（统一学习率策略，与Task1/2保持一致）
+    # 优化器配置（使用SmolVLA默认值）
     policy:
-      optimizer_lr: 0.00008 # 统一学习率（从0.00012降低），提高训练稳定性
-      scheduler_warmup_steps: 5000 # 增加warmup（从3000→5000，约4.8 epochs），避免早期发散
-      scheduler_decay_steps: 50000 # 保持decay步数（48.0 epochs，23.0%），配合200 epochs训练
+      optimizer_lr: 0.0001 # 1e-4, SmolVLA默认学习率
+      scheduler_warmup_steps: 1000 # SmolVLA默认值
+      scheduler_decay_steps: 30000 # SmolVLA默认值
 
 
   # Replay配置（方案A：不使用replay，单任务专用）
