--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -55,11 +55,11 @@ policy:
   empty_cameras: 0 # 不使用空相机占位
 
   # 观测配置
-  n_obs_steps: 1
-  # Flow Matching配置（SmolVLA使用Flow Matching而非Diffusion）
-  num_steps: 10 # 提高采样精度（50→60），生成更精确的动作
-  chunk_size: 50 # 减小chunk长度（40→20），增加视觉反馈频率，更闭环
-  n_action_steps: 20 # 每次执行15步，更频繁地重新观测和规划
+  n_obs_steps: 3
+  # Flow Matching配置
+  num_steps: 15 # 采样精度
+  chunk_size: 50 # chunk的步数
+  n_action_steps: 30 # 重新观测和规划的步数
 
   # 归一化配置
   normalization_mapping:
