--- a/configs/policy/diffusion_config.yaml
+++ b/configs/policy/diffusion_config.yaml
@@ -38,8 +38,8 @@ training:
   max_training_step: null
 
   # resume training，断点续训
-  resume: False
-  resume_timestamp: '' # 若开启，将从outputs/train/<task>/<method>/<resume_timestamp>中加载最后一个epoch参数续训
+  resume: True
+  resume_timestamp: 'run_20251111_071436' # 若开启，将从outputs/train/<task>/<method>/<resume_timestamp>中加载最后一个epoch参数续训
 
   # 数据增广相关的配置
   RGB_Augmenter:
